src/main/java/com/example/restaurant/error/ConfirmPasswordNotSameAsOriginalPassException.java
package com.example.restaurant.error;

public class ConfirmPasswordNotSameAsOriginalPassException extends RuntimeException{
}
